# wedding_sites

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
settings/: config.py
src/: bot.py  main.py
src/adapters/api/http/v1/: __init__.py  payments.py  sites.py
src/adapters/api/http/v1/dto/: payments.py  sites.py
src/adapters/bot/routers/: check_router.py
src/adapters/spi/persistent/models/: base.py  payments.py  sites.py
src/adapters/spi/persistent/repositories/: payments_repo.py  sites_repo.py
src/adapters/spi/persistent/repositories/ports/: payments.py  sites.py
src/infrastructure/: exception_handlers.py  ioc.py
src/infrastructure/adapters/: tg_bot_adapter.py
src/infrastructure/db/migrations/: base.py  env.py
src/infrastructure/db/migrations/versions/: 2024_09_10_124652_.py  2024_09_15_200504_add_payments.py  2024_09_15_215019_change_create_data.py  2024_09_30_214442_.py  2024_09_30_230339_.py  2024_11_19_160905_add_tg_id.py
src/infrastructure/ports/: tg_bot_adapter.py
src/lib/: database.py  middlewares.py  providers.py  repository.py
src/services/: payments.py  sites.py
src/services/ports/: payments.py  sites.py
src/settings/: config.py
