[project]
name = "wedding-sites"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "vadim.melnik", email = "vadim.melnik@idaproject.com" }
]
dependencies = [
    "aiogram>=3.0",
    "litestar>=2.9.0",
    "sqlalchemy>=2.0.30",
    "dishka>=1.2.0",
    "alembic>=1.13.1",
    "pydantic-settings>=2.4.0",
    "structlog>=24.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/wedding_sites"]
